[tool.poetry]
name = "PyNetworkD3"
version = "0.0.8"
description = "Create D3 visualization networks with Python"
license = "MIT"
authors = ["Hernán Valdivieso <hfvaldivieso@uc.cl>"]
maintainers = ["Hernán Valdivieso <hfvaldivieso@uc.cl>"]
readme = "README.md"
repository = "https://github.com/Hernan4444/PyNetworkD3"
documentation = "https://github.com/Hernan4444/PyNetworkD3#readme"
packages = [
    { include = "PyNetworkD3" },
]
exclude = [
    ".github",
    ".flake8",
    ".pylintrc",
    "mypy.ini",
    ".coveragerc",
    "Makefile",
    "scripts",
    "tests"
]

[tool.poetry.dependencies]
python = "^3.6"
pyserial = "^3.5"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.6.4"
mypy = "^0.790"
pylint = "^2.6.0"
pytest = "^6.1.1"
pytest-cov = "^2.10.1"

[tool.poetry.plugins."console_scripts"]
PyNetworkD3 = "PyNetworkD3.cli.core:dispatcher"

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/Hernan4444/PyNetworkD3/issues"
